# HappyLittleStudents

./: CMakeLists.txt  LICENSE  README.md  log.txt  main.c
Files/: SpecificheTXT.txt  carte.txt  save_list.txt
Game/: effects.c  effects.h  game.c  game.h  game_mechanics.c  game_mechanics.h
Input/: file_reading.c  file_reading.h  salvataggi.c  salvataggi.h  user_input.c  user_input.h
Output/: stampe.c  stampe.h
Specifiche_testi/: salvataggioProva.sav
Srutture/: Strutture.c  Strutture.h
Strutture/: Strutture.c  Strutture.h
